# YADRO_Test

./: .gitignore  CMakeLists.txt  README.md  input.txt  main.cpp  output.txt  tape_config.json  tape_props.config
src/app/: app.cpp  app.h
src/reader_interface/: min_heap.cpp  min_heap.h  reader_interface.cpp  reader_interface.h
src/sorter_module/: min_heap.cpp  min_heap.h  sorter.cpp  sorter.h
src/tape/: tape.cpp  tape.h
tmp/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
